--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lions Alpha Kennel</title>
+    <title>Lions Alpha Kennel | American Bully XL & Brazilian Bull</title>
+
     <link rel="icon" type="image/png" href="/logo.png" />
+    
+    <link rel="apple-touch-icon" href="/logo.png" />
+
+    <meta property="og:image" content="/logo.png" />
+    <meta name="twitter:image" content="/logo.png" />
+    
+    <meta name="description" content="Lions Alpha Kennel - Especialista em American Bully XL e Brazilian Bull com genética de elite. Bahia, Brasil. Exportação mundial." />
   </head>
 
   <body>
